# bcdn

./: .gitignore  Cargo.toml  LICENSE  README.md  bcdn.toml  mix.exs
.devcontainer/: Dockerfile  devcontainer.json
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: bcdn.ex  bcdn_web.ex
lib/bcdn/: accounts.ex  application.ex  feeds.ex  mailer.ex  repo.ex
lib/bcdn/accounts/: user.ex  user_notifier.ex  user_token.ex
lib/bcdn/feeds/: feed.ex
lib/bcdn_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/bcdn_web/controllers/: feed_controller.ex  page_controller.ex  user_auth.ex  user_confirmation_controller.ex  user_registration_controller.ex  user_reset_password_controller.ex  user_session_controller.ex  user_settings_controller.ex
lib/bcdn_web/templates/feed/: index.html.heex  show.html.heex
lib/bcdn_web/templates/layout/: root.html.heex
lib/bcdn_web/views/: error_helpers.ex  error_view.ex  feed_view.ex  layout_view.ex  page_view.ex  user_confirmation_view.ex  user_registration_view.ex  user_reset_password_view.ex  user_session_view.ex  user_settings_view.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20220323164126_create_users_auth_tables.exs  20220323170007_create_feeds.exs
src/: cache.rs  cache_item.rs  cache_server.rs  config.rs  digest.rs  download.rs  hash_serde.rs  main.rs  manager.rs  manifest.rs  proxy_server.rs  server.rs  util.rs
src/cache_server/: cache.rs  download.rs  download_pool.rs  mod.rs
src/cache_server/cache/: cache.rs  digest.rs  mod.rs
src/cache_server/download/: downloader.rs  job_queue.rs  mod.rs  pool.rs
src/proxy_server/: cache_info.rs  mod.rs
src/util/: chunked_read_file.rs  file_response.rs  mod.rs  named_file.rs  rpc.rs
test/: test_helper.exs
test/bcdn/: accounts_test.exs  feeds_test.exs
test/bcdn_web/controllers/: feed_controller_test.exs  page_controller_test.exs  user_auth_test.exs  user_confirmation_controller_test.exs  user_registration_controller_test.exs  user_reset_password_controller_test.exs  user_session_controller_test.exs  user_settings_controller_test.exs
test/bcdn_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
test/support/fixtures/: accounts_fixtures.ex  feeds_fixtures.ex
