[package]
name = "bcdn"
version = "0.1.0"
authors = ["Benedikt Reinartz <filmor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-files = "0.5"
actix-rt = "1.1"
actix-web = "3.3"
blake3 = "0.3"
clap = "2"
futures = "0.3"
futures-util = "0.3"
globset = "0.4"
hex = { version = "0.4", features = ["serde"] }
log = "0.4"
mime = "0.3"
# once_cell = { version = "1.4", features = ["parking_lot"] }
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = { version = "0.10", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
toml = "0.5"
url = "2.2"
zerocopy = "0.3"