[package]
name = "bcdn"
version = "0.1.0"
authors = ["Benedikt Reinartz <filmor@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
blake3 = "1"
clap = "4"
futures = "0.3"
futures-util = "0.3"
globset = "0.4"
hex = { version = "0.4", features = ["serde"] }
hyper = "0.14"
log = "0.4"
mime = "0.3"
# once_cell = { version = "1.4", features = ["parking_lot"] }
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tower-http = "0.3"
toml = "0.5"
url = "2"
zerocopy = "0.6"
